# timesync

./: .gitignore  .prettierignore  .prettierrc.yml  README.md  package.json
api/: .eslintignore  .eslintrc.yml  README.md  main.js  package.json  tsconfig.json
api/src/: app.ts
api/src/controllers/: base.controller.ts
api/src/types/: declarations.d.ts
api/src/user/: user.entity.ts
client/: README.md  app.js  package.json
server/: .gitignore  Cargo.toml  README.md
